attempt to fix calculator mobile responsive display on ios

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,8 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  background-color: aliceblue;  
+  background-color: aliceblue;
+  min-height: -webkit-fill-available;
 }
 
 a {
